--- a/POSCasestudy/App.config
+++ b/POSCasestudy/App.config
@@ -2,7 +2,7 @@
 <configuration>
 
 	<appSettings>
-		<add key="CALC" value="POSCasestudy.KATaxCalculator"/>
+		<add key="CALC" value="POSCasestudy.USTaxCalculatorAdapter"/>
 	</appSettings>
 	
 	
